--- a/app-i18n/skk-jisyo/ChangeLog
+++ b/app-i18n/skk-jisyo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-i18n/skk-jisyo
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/skk-jisyo/ChangeLog,v 1.24 2004/05/09 18:33:20 usata Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/skk-jisyo/ChangeLog,v 1.25 2004/06/22 23:18:07 matsuu Exp $
+
+  23 Jun 2004; <matsuu@gentoo.org> skk-jisyo-200404.ebuild:
+  Added ~sparc and ~amd64 to KEYWORDS.
 
   10 May 2004; Mamoru KOMACHI <usata@gentoo.org> skk-jisyo-200310.ebuild,
   skk-jisyo-200401.ebuild, skk-jisyo-200404.ebuild:
