--- a/dev-libs/libxslt/ChangeLog
+++ b/dev-libs/libxslt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libxslt
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libxslt/ChangeLog,v 1.68 2004/06/03 16:35:47 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libxslt/ChangeLog,v 1.69 2004/06/23 03:52:12 tgall Exp $
+ 
+  22 Jun 2004; Tom Gall <tgall@gentoo.org> libxslt-1.1.6.ebuild:
+  stable on ppc64, bug #54149
 
   03 Jun 2004; Aron Griffis <agriffis@gentoo.org> libxslt-1.1.2.ebuild,
   libxslt-1.1.3.ebuild:
