--- a/xfce-base/libxfcegui4/ChangeLog
+++ b/xfce-base/libxfcegui4/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/libxfcegui4
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/libxfcegui4/ChangeLog,v 1.24 2004/05/19 01:20:19 gmsoft Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/xfce-base/cvs-repo/gentoo-x86/xfce-base/libxfcegui4/ChangeLog,v 1.25 2004/06/23 09:02:44 malc Exp $
+
+  23 Jun 2004; <malc@gentoo.org> libxfcegui4-4.0.5.ebuild:
+  Mark stable on amd64
 
   18 May 2004; Guy Martin <gmsoft@gentoo.org> libxfcegui4-4.0.5.ebuild:
   Marked stable on hppa.
