--- a/app-i18n/jfbterm/ChangeLog
+++ b/app-i18n/jfbterm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-i18n/jfbterm
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/jfbterm/ChangeLog,v 1.17 2004/05/30 06:16:48 usata Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/jfbterm/ChangeLog,v 1.18 2004/06/23 17:30:39 usata Exp $
+
+  24 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> jfbterm-0.4.6.ebuild:
+  Stable on x86 and ppc
 
 *jfbterm-0.4.6 (30 May 2004)
 
