--- a/x11-wm/windowlab/ChangeLog
+++ b/x11-wm/windowlab/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-wm/windowlab
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/windowlab/ChangeLog,v 1.6 2004/05/22 16:34:17 usata Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/windowlab/ChangeLog,v 1.7 2004/06/23 18:21:32 usata Exp $
+
+*windowlab-1.24 (24 Jun 2004)
+
+  24 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> metadata.xml,
+  windowlab-1.23.ebuild, +windowlab-1.24.ebuild:
+  Version bumped. Marked 0.23 as stable.
 
 *windowlab-1.23 (23 May 2004)
 
