--- a/app-sci/pgcalc2/ChangeLog
+++ b/app-sci/pgcalc2/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-sci/pgcalc2
 # Copyright 2004-2004 Gentoo Technologies, Inc.; Distributed under the GPL
 
+  23 Jun 2004; David Holm <dholm@gentoo.org> pgcalc2-2.2.4.ebuild:
+  Added to ~ppc.
+
 *pgcalc2-2.2.4 (22 Jun 2004)
 
   22 Jun 2004; Dylan Carlson <absinthe@gentoo.org> +metadata.xml,
