--- a/app-sci/sim4/ChangeLog
+++ b/app-sci/sim4/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-sci/sim4
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-sci/cvs-repo/gentoo-x86/app-sci/sim4/Attic/ChangeLog,v 1.1 2004/06/22 16:36:47 ribosome Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-sci/cvs-repo/gentoo-x86/app-sci/sim4/Attic/ChangeLog,v 1.2 2004/06/23 20:35:03 dholm Exp $
+
+  23 Jun 2004; David Holm <dholm@gentoo.org> sim4-20030921.ebuild:
+  Added to ~ppc.
 
 *sim4-20030921 (22 Jun 2004)
 
