--- a/x11-themes/icewm-themes/ChangeLog
+++ b/x11-themes/icewm-themes/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-themes/icewm-themes
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/icewm-themes/ChangeLog,v 1.1 2004/06/20 20:27:47 usata Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/icewm-themes/ChangeLog,v 1.2 2004/06/23 20:48:34 dholm Exp $
+
+  23 Jun 2004; David Holm <dholm@gentoo.org> icewm-themes-0.0.1.ebuild:
+  Added to ~ppc.
 
 *icewm-themes-0.0.1 (21 Jun 2004)
 
