--- a/app-i18n/fcitx/ChangeLog
+++ b/app-i18n/fcitx/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-i18n/fcitx
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/fcitx/ChangeLog,v 1.5 2004/06/21 17:20:28 usata Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/fcitx/ChangeLog,v 1.6 2004/06/23 20:53:25 dholm Exp $
+
+  23 Jun 2004; David Holm <dholm@gentoo.org> fcitx-2.1.0_rc.ebuild:
+  Added to ~ppc.
 
   22 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> fcitx-1.8.5.ebuild,
   fcitx-2.0.1.ebuild:
