--- a/sys-kernel/wolk-sources/ChangeLog
+++ b/sys-kernel/wolk-sources/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-kernel/wolk-sources
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/wolk-sources/Attic/ChangeLog,v 1.47 2004/06/15 19:57:02 plasmaroo Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/wolk-sources/Attic/ChangeLog,v 1.48 2004/06/23 23:24:19 agriffis Exp $
+
+  23 Jun 2004; Aron Griffis <agriffis@gentoo.org> wolk-sources-4.9-r8.ebuild:
+  QA - fix use invocation
 
 *wolk-sources-4.9-r8 (15 Jun 2004)
 
