--- a/x11-libs/rep-gtk/ChangeLog
+++ b/x11-libs/rep-gtk/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/rep-gtk
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/rep-gtk/ChangeLog,v 1.28 2004/05/13 17:52:02 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/rep-gtk/ChangeLog,v 1.29 2004/06/24 00:14:53 agriffis Exp $
+
+  23 Jun 2004; Aron Griffis <agriffis@gentoo.org> rep-gtk-0.15-r3.ebuild:
+  QA - fix use invocation
 
 *rep-gtk-0.15-r3 (13 May 2004)
 
