--- a/media-sound/galan/ChangeLog
+++ b/media-sound/galan/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/galan
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/galan/ChangeLog,v 1.11 2004/04/27 18:10:09 kugelfang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/galan/ChangeLog,v 1.12 2004/06/24 07:24:48 eradicator Exp $
+
+*galan-0.3.0_beta6 (23 Jun 2004)
+
+  23 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  +galan-0.3.0_beta6.ebuild:
+  Version bump.
 
   27 Apr 2004; Danny van Dyk <kugelfang@gentoo.org> galan-0.3.0_beta5.ebuild:
   marked ~amd64.
