--- a/media-sound/cheesetracker/ChangeLog
+++ b/media-sound/cheesetracker/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/cheesetracker
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/cheesetracker/Attic/ChangeLog,v 1.9 2004/06/13 08:15:07 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/cheesetracker/Attic/ChangeLog,v 1.10 2004/06/24 07:34:35 eradicator Exp $
+
+  23 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  cheesetracker-0.9.9.ebuild:
+  Stable x86 amd64.
 
   13 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
   cheesetracker-0.9.1.ebuild, cheesetracker-0.9.9.ebuild:
