--- a/media-sound/gnomad/ChangeLog
+++ b/media-sound/gnomad/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/gnomad
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/gnomad/ChangeLog,v 1.8 2004/05/10 05:13:18 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/gnomad/ChangeLog,v 1.9 2004/06/24 07:47:03 eradicator Exp $
+
+  24 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org> gnomad-2.4.4.ebuild:
+  Stable x86. Added ~amd64.
 
   09 May 2004; Michael Sterrett <mr_bones_@gentoo.org> gnomad-2.4.4.ebuild:
   fix bug #50516; tidy
