--- a/media-sound/alsa-utils/ChangeLog
+++ b/media-sound/alsa-utils/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/alsa-utils
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/alsa-utils/ChangeLog,v 1.57 2004/06/18 08:07:53 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/alsa-utils/ChangeLog,v 1.58 2004/06/24 08:07:40 eradicator Exp $
+
+  24 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  alsa-utils-1.0.5.ebuild:
+  Stable x86 amd64.
 
   18 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org> files/alsasound:
   Fix return value for success of modules_unload.  Redirect stdout and
