--- a/media-plugins/alsa-jack/ChangeLog
+++ b/media-plugins/alsa-jack/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/alsa-jack
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/alsa-jack/Attic/ChangeLog,v 1.9 2004/06/13 08:09:21 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/alsa-jack/Attic/ChangeLog,v 1.10 2004/06/24 08:09:02 eradicator Exp $
+
+  24 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  alsa-jack-1.0.5.ebuild:
+  Stable amd64 x86.
 
   13 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
   alsa-jack-1.0.3b.ebuild, alsa-jack-1.0.4.ebuild, alsa-jack-1.0.5.ebuild:
