--- a/games-fps/enemy-territory/ChangeLog
+++ b/games-fps/enemy-territory/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for games-fps/enemy-territory
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/enemy-territory/ChangeLog,v 1.10 2004/06/03 20:54:42 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/enemy-territory/ChangeLog,v 1.11 2004/06/24 11:48:23 wolf31o2 Exp $
+
+  24 Jun 2004; Chris Gianelloni <wolf31o2@gentoo.org>
+  enemy-territory-2.56-r2.ebuild:
+  QA cleanup, making etmain writable for the group, and closing bug #54938.
 
   03 Jun 2004; Aron Griffis <agriffis@gentoo.org>
   enemy-territory-2.56-r2.ebuild:
