--- a/media-gfx/gimageview/ChangeLog
+++ b/media-gfx/gimageview/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/gimageview
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/gimageview/ChangeLog,v 1.2 2004/05/22 20:24:03 usata Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/gimageview/ChangeLog,v 1.3 2004/06/24 16:28:37 agriffis Exp $
+
+  24 Jun 2004; Aron Griffis <agriffis@gentoo.org> gimageview-0.2.25.ebuild:
+  QA - fix use invocation
 
 *gimageview-0.2.25 (23 May 2004)
 
