--- a/app-accessibility/flite/ChangeLog
+++ b/app-accessibility/flite/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for app-accessibility/flite
-# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/flite/ChangeLog,v 1.12 2004/06/15 23:29:46 eradicator Exp $
+# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/flite/ChangeLog,v 1.13 2004/06/24 21:22:21 agriffis Exp $
 
   15 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org> flite-1.2-r1.ebuild:
   Stable x86.
