--- a/app-accessibility/gok/ChangeLog
+++ b/app-accessibility/gok/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for app-accessibility/gok
-# Copyright 1999-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/gok/ChangeLog,v 1.12 2004/06/15 23:39:12 kloeri Exp $
+# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/gok/ChangeLog,v 1.13 2004/06/24 21:23:20 agriffis Exp $
 
   16 Jun 2004; Bryan Østergaard <kloeri@gentoo.org> gok-0.10.2.ebuild:
   Stable on alpha.
