--- a/app-cdr/k3b/ChangeLog
+++ b/app-cdr/k3b/ChangeLog
@@ -3,6 +3,9 @@
 # /home/cvsroot/gentoo-x86/app-cdr/k3b/ChangeLog,v 1.46 2004/03/27 16:18:17
 # lanius Exp $
 
+  24 Jun 2004; Danny van Dyk <kugelfang@gentoo.org> k3b-0.11.10.ebuild:
+  Marked stable on amd64.
+
   16 Jun 2004; Martin Holzer <mholzer@gentoo.org> k3b-0.11.10.ebuild:
   need a newer version of kde
 
