--- a/app-benchmarks/xfbsuite/ChangeLog
+++ b/app-benchmarks/xfbsuite/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for app-benchmarks/xfbsuite
-# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-benchmarks/cvs-repo/gentoo-x86/app-benchmarks/xfbsuite/Attic/ChangeLog,v 1.5 2004/04/15 20:01:29 dholm Exp $
+# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-benchmarks/cvs-repo/gentoo-x86/app-benchmarks/xfbsuite/Attic/ChangeLog,v 1.6 2004/06/24 21:30:01 agriffis Exp $
 
   15 Apr 2004; David Holm <dholm@gentoo.org> xfbsuite-0.9.7.6.ebuild:
   Where did the ~ppc go?
