--- a/dev-ada/cbind/ChangeLog
+++ b/dev-ada/cbind/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for dev-ada/cbind
-# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ada/cvs-repo/gentoo-x86/dev-ada/cbind/ChangeLog,v 1.5 2004/03/19 10:07:11 aliz Exp $
+# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ada/cvs-repo/gentoo-x86/dev-ada/cbind/ChangeLog,v 1.6 2004/06/24 21:46:10 agriffis Exp $
 
   19 Mar 2004; Daniel Ahlberg <aliz@gentoo.org> cbind-6.ebuild:
   Inherit eutils.
