--- a/fresco-base/fresco-env/ChangeLog
+++ b/fresco-base/fresco-env/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for fresco-base/fresco-env
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/fresco-base/cvs-repo/gentoo-x86/fresco-base/fresco-env/Attic/ChangeLog,v 1.3 2003/02/12 06:48:07 vapier Exp $
+# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/fresco-base/cvs-repo/gentoo-x86/fresco-base/fresco-env/Attic/ChangeLog,v 1.4 2004/06/24 21:51:09 agriffis Exp $
 
 *fresco-env-1.0.ebuild (12 Aug 2002)
 
