--- a/dev-cpp/commoncpp2/ChangeLog
+++ b/dev-cpp/commoncpp2/ChangeLog
@@ -1,5 +1,5 @@
 # ChangeLog for dev-cpp/commoncpp2
-# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
 # $Header:
 
   15 Mar 2004; Daniel Ahlberg <aliz@gentoo.org> commoncpp2-1.0.13.ebuild:
