--- a/dev-dotnet/gtkgl-sharp/ChangeLog
+++ b/dev-dotnet/gtkgl-sharp/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for dev-dotnet/gtkgl-sharp
-# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-dotnet/cvs-repo/gentoo-x86/dev-dotnet/gtkgl-sharp/Attic/ChangeLog,v 1.2 2004/06/02 21:30:23 dholm Exp $
+# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-dotnet/cvs-repo/gentoo-x86/dev-dotnet/gtkgl-sharp/Attic/ChangeLog,v 1.3 2004/06/24 22:03:09 agriffis Exp $
 
   02 Jun 2004; David Holm <dholm@gentoo.org> gtkgl-sharp-0.05.ebuild:
   Added to ~ppc.
