--- a/mail-client/pinepgp/ChangeLog
+++ b/mail-client/pinepgp/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for net-mail/pinepgp
-# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/pinepgp/ChangeLog,v 1.2 2004/06/04 09:08:22 dholm Exp $
+# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/pinepgp/ChangeLog,v 1.3 2004/06/24 22:17:56 agriffis Exp $
 
   04 Jun 2004; David Holm <dholm@gentoo.org> pinepgp-0.18.0-r1.ebuild:
   Added to ~ppc.
