--- a/mail-client/squirrelmail/ChangeLog
+++ b/mail-client/squirrelmail/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for net-mail/squirrelmail
-# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/squirrelmail/ChangeLog,v 1.9 2004/06/14 17:57:18 lu_zero Exp $
+# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/squirrelmail/ChangeLog,v 1.10 2004/06/24 22:18:29 agriffis Exp $
 
   14 Jun 2004; Luca Barbato <lu_zero@gentoo.org> squirrelmail-1.4.3a.ebuild:
   Marked ppc
