--- a/mail-filter/anomy-sanitizer/ChangeLog
+++ b/mail-filter/anomy-sanitizer/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for net-mail/anomy-sanitizer
-# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/anomy-sanitizer/ChangeLog,v 1.2 2004/06/04 23:34:49 dholm Exp $
+# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/anomy-sanitizer/ChangeLog,v 1.3 2004/06/24 22:19:50 agriffis Exp $
 
   05 Jun 2004; David Holm <dholm@gentoo.org> anomy-sanitizer-1.67.ebuild:
   Added to ~ppc.
