--- a/mail-filter/bmf/ChangeLog
+++ b/mail-filter/bmf/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for net-mail/bmf
-# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/bmf/ChangeLog,v 1.2 2004/06/04 23:33:10 dholm Exp $
+# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/bmf/ChangeLog,v 1.3 2004/06/24 22:20:12 agriffis Exp $
 
   05 Jun 2004; David Holm <dholm@gentoo.org> bmf-0.9.4.ebuild:
   Added to ~ppc.
