--- a/mail-filter/disspam/ChangeLog
+++ b/mail-filter/disspam/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for net-mail/disspam
-# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/disspam/ChangeLog,v 1.1 2004/06/03 07:06:07 seemant Exp $
+# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/disspam/ChangeLog,v 1.2 2004/06/24 22:20:45 agriffis Exp $
 
 *disspam-0.12 (03 Jun 2004)
 
