--- a/mail-filter/popfile/ChangeLog
+++ b/mail-filter/popfile/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for net-mail/popfile
-# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/popfile/ChangeLog,v 1.2 2004/06/04 23:09:52 dholm Exp $
+# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/popfile/ChangeLog,v 1.3 2004/06/24 22:21:28 agriffis Exp $
 
   05 Jun 2004; David Holm <dholm@gentoo.org> popfile-0.21.1.ebuild:
   Added to ~ppc.
