--- a/mail-filter/procmail/ChangeLog
+++ b/mail-filter/procmail/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for net-mail/procmail
-# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/procmail/ChangeLog,v 1.2 2004/06/07 20:43:28 agriffis Exp $
+# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/procmail/ChangeLog,v 1.3 2004/06/24 22:21:39 agriffis Exp $
 
   07 Jun 2004; Aron Griffis <agriffis@gentoo.org> procmail-3.22-r6.ebuild:
   Fix use invocation
