--- a/sys-boot/syslinux/ChangeLog
+++ b/sys-boot/syslinux/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for sys-boot/syslinux
-# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Id: ChangeLog,v 1.6 2004/05/11 20:49:12 solar Exp $
+# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
+# $Id: ChangeLog,v 1.7 2004/06/24 22:36:20 agriffis Exp $
 
   11 May 2004; <solar@gentoo.org> syslinux-2.06.ebuild, syslinux-2.09.ebuild:
   add ssp check before patching in nossp patches. This prevents breakage if your
