--- a/sys-boot/yaboot/ChangeLog
+++ b/sys-boot/yaboot/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for sys-boot/yaboot
-# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-boot/cvs-repo/gentoo-x86/sys-boot/yaboot/ChangeLog,v 1.9 2004/05/26 17:45:12 dostrow Exp $
+# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-boot/cvs-repo/gentoo-x86/sys-boot/yaboot/ChangeLog,v 1.10 2004/06/24 22:36:32 agriffis Exp $
 
 *yaboot-1.3.12-r1 (23 May 2004)
 
