--- a/net-firewall/gtk-iptables/ChangeLog
+++ b/net-firewall/gtk-iptables/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for net-firewall/gtk-iptables
-# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-firewall/cvs-repo/gentoo-x86/net-firewall/gtk-iptables/Attic/ChangeLog,v 1.3 2004/06/16 17:49:03 seemant Exp $
+# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/net-firewall/cvs-repo/gentoo-x86/net-firewall/gtk-iptables/Attic/ChangeLog,v 1.4 2004/06/24 22:40:04 agriffis Exp $
 
 *gtk-iptables-0.4.21 (16 Jun 2004)
 
