--- a/sys-cluster/feedbackd-agent/ChangeLog
+++ b/sys-cluster/feedbackd-agent/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for sys-cluster/feedbackd-agent
-# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/feedbackd-agent/ChangeLog,v 1.2 2004/06/08 23:36:32 tantive Exp $
+# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/feedbackd-agent/ChangeLog,v 1.3 2004/06/24 22:37:28 agriffis Exp $
 
 *feedbackd-agent-0.3.1 (09 Jun 2004)
 
