--- a/sys-cluster/mpich/ChangeLog
+++ b/sys-cluster/mpich/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for sys-cluster/mpich
-# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/mpich/Attic/ChangeLog,v 1.13 2004/04/02 22:30:09 spyderous Exp $
+# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/mpich/Attic/ChangeLog,v 1.14 2004/06/24 22:39:17 agriffis Exp $
 
   02 Apr 2004; Donnie Berkholz <spyderous@gentoo.org>; mpich-1.2.5.2.ebuild:
   Add MPICH_CONFIGURE_OPTS variable for customization (#38207).
