--- a/sys-cluster/openpbs/ChangeLog
+++ b/sys-cluster/openpbs/ChangeLog
@@ -1,5 +1,5 @@
 # ChangeLog for sys-cluster/openpbs
-# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /home/cvsroot/gentoo-x86/sys-cluster/openpbs/ChangeLog
 
   13 Jun 2004; Donnie Berkholz <spyderous@gentoo.org>;
