--- a/sys-cluster/xgridagent/ChangeLog
+++ b/sys-cluster/xgridagent/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for sys-cluster/xgridagent
-# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/xgridagent/ChangeLog,v 1.1 2004/06/24 16:30:13 dholm Exp $
+# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/xgridagent/ChangeLog,v 1.2 2004/06/24 22:41:56 agriffis Exp $
 
 *xgridagent-1.0 (24 Jun 2004)
 
