--- a/sys-devel/gdb/ChangeLog
+++ b/sys-devel/gdb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-devel/gdb
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-devel/cvs-repo/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.78 2005/07/09 23:44:44 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-devel/cvs-repo/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.79 2005/07/16 11:01:20 kugelfang Exp $
+
+  16 Jul 2005; Danny van Dyk <kugelfang@gentoo.org> gdb-6.3-r4.ebuild:
+  Marked s390.
 
 *gdb-6.3-r4 (09 Jul 2005)
 
