--- a/gnustep-libs/popplerkit/ChangeLog
+++ b/gnustep-libs/popplerkit/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnustep-libs/popplerkit
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnustep-libs/cvs-repo/gentoo-x86/gnustep-libs/popplerkit/Attic/ChangeLog,v 1.1 2005/07/15 16:42:31 fafhrd Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnustep-libs/cvs-repo/gentoo-x86/gnustep-libs/popplerkit/Attic/ChangeLog,v 1.2 2005/07/16 11:30:52 dholm Exp $
+
+  16 Jul 2005; David Holm <dholm@gentoo.org>
+  popplerkit-0.0.0.20050609.ebuild:
+  Added to ~ppc.
 
 *popplerkit-0.0.0.20050609 (15 Jul 2005)
 
