--- a/net-im/bitlbee/ChangeLog
+++ b/net-im/bitlbee/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-im/bitlbee
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/bitlbee/ChangeLog,v 1.53 2005/05/15 22:17:06 weeve Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/bitlbee/ChangeLog,v 1.54 2005/07/16 21:34:10 weeve Exp $
+
+*bitlbee-0.92-r2 (16 Jul 2005)
+
+  16 Jul 2005; Jason Wever <weeve@gentoo.org> +bitlbee-0.92-r2.ebuild:
+  Revision bump, resolves bug #97098.
 
 *bitlbee-0.92-r1 (15 May 2005)
 
