--- a/net-ftp/ncftp/ChangeLog
+++ b/net-ftp/ncftp/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-ftp/ncftp
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-ftp/cvs-repo/gentoo-x86/net-ftp/ncftp/ChangeLog,v 1.36 2005/07/17 10:59:54 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-ftp/cvs-repo/gentoo-x86/net-ftp/ncftp/ChangeLog,v 1.37 2005/07/17 11:03:00 vapier Exp $
+
+*ncftp-3.1.9 (17 Jul 2005)
+
+  17 Jul 2005; Mike Frysinger <vapier@gentoo.org> +ncftp-3.1.9.ebuild:
+  Version bump.
 
 *ncftp-3.1.8-r2 (17 Jul 2005)
 
