--- a/dev-php/PEAR-DB/ChangeLog
+++ b/dev-php/PEAR-DB/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-php/PEAR-DB
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-DB/ChangeLog,v 1.32 2005/07/07 19:06:37 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php/cvs-repo/gentoo-x86/dev-php/PEAR-DB/ChangeLog,v 1.33 2005/07/17 12:12:41 dertobi123 Exp $
+
+  17 Jul 2005; Tobias Scherbaum <dertobi123@gentoo.org>
+  PEAR-DB-1.7.6.ebuild:
+  ppc stable
 
   07 Jul 2005; Markus Rothe <corsair@gentoo.org> PEAR-DB-1.7.6.ebuild:
   Stable on ppc64
