--- a/app-editors/vim-core/ChangeLog
+++ b/app-editors/vim-core/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/vim-core
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/vim-core/ChangeLog,v 1.151 2005/07/07 18:34:58 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/vim-core/ChangeLog,v 1.152 2005/07/18 01:09:32 agriffis Exp $
+
+  18 Jul 2005; Aron Griffis <agriffis@gentoo.org> vim-core-6.3.075.ebuild:
+  Stable alpha amd64 hppa ia64 mips sparc x86
 
   07 Jul 2005; Markus Rothe <corsair@gentoo.org> vim-core-6.3.068.ebuild:
   Stable on ppc64
