--- a/net-misc/partysip/ChangeLog
+++ b/net-misc/partysip/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/partysip
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/partysip/ChangeLog,v 1.9 2005/07/17 22:20:22 stkn Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/partysip/ChangeLog,v 1.10 2005/07/18 11:51:31 dholm Exp $
+
+  18 Jul 2005; David Holm <dholm@gentoo.org> partysip-2.2.3.ebuild:
+  Added to ~ppc.
 
 *partysip-2.2.3 (18 Jul 2005)
 
