--- a/net-misc/dropbear/ChangeLog
+++ b/net-misc/dropbear/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/dropbear
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/dropbear/ChangeLog,v 1.17 2005/07/17 11:19:00 solar Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/dropbear/ChangeLog,v 1.18 2005/07/18 14:09:49 gustavoz Exp $
+
+  18 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org> dropbear-0.45.ebuild:
+  Stable on sparc
 
 *dropbear-0.46 (17 Jul 2005)
 
