--- a/games-strategy/asc/ChangeLog
+++ b/games-strategy/asc/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for games-strategy/asc
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-strategy/cvs-repo/gentoo-x86/games-strategy/asc/ChangeLog,v 1.14 2005/05/04 01:40:39 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-strategy/cvs-repo/gentoo-x86/games-strategy/asc/ChangeLog,v 1.15 2005/07/18 19:19:54 mr_bones_ Exp $
+
+*asc-1.16.1.0 (18 Jul 2005)
+
+  18 Jul 2005; Michael Sterrett <mr_bones_@gentoo.org> +asc-1.16.1.0.ebuild:
+  version bump - ebuild submitted by Robert Schuster via bug #99423
 
 *asc-1.16.0.0 (04 May 2005)
 
