--- a/dev-perl/asterisk-perl/ChangeLog
+++ b/dev-perl/asterisk-perl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/asterisk-perl
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/asterisk-perl/Attic/ChangeLog,v 1.2 2005/07/19 01:56:04 swegener Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/asterisk-perl/Attic/ChangeLog,v 1.3 2005/07/19 08:10:36 dholm Exp $
+
+  19 Jul 2005; David Holm <dholm@gentoo.org> asterisk-perl-0.08.ebuild:
+  Added to ~ppc.
 
 *asterisk-perl-0.08 (18 Jul 2005)
 
