--- a/net-analyzer/bwm-ng/ChangeLog
+++ b/net-analyzer/bwm-ng/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/bwm-ng
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/bwm-ng/ChangeLog,v 1.2 2005/02/23 15:17:29 hollow Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/bwm-ng/ChangeLog,v 1.3 2005/07/19 12:52:58 dholm Exp $
+
+  19 Jul 2005; David Holm <dholm@gentoo.org> bwm-ng-0.5.ebuild:
+  Added to ~ppc.
 
 *bwm-ng-0.5 (23 Feb 2005)
 
